--- a/03-Base_datos.Rmd
+++ b/03-Base_datos.Rmd
@@ -27,15 +27,15 @@ La informacion de suelos esta expresada en dos distintas extensiones y escalas, 
 ###### Enlaces para descarga {-}
  
 <div style="font-size: 12px"> 
-|Descripcion|Escala/resolucion|Nombre archivo|
-|:----|:---:|:---:|
-|Unidades de suelos Cuenca completa a |1:500.000|[Csuebcpm.zip](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
-|Unidades de suelos Bajo Caroni|1:250.000|[Csuebcpm.zip](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
-|Unidades de suelos Medio Caroni|1:250.000|[Csuebcpm.zip](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
-|Unidades de suelos Alto Caroni Este|1:250.000|[Csuebcpm.zip](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
-|Unidades de suelos Alto Caroni Oeste|1:250.000|[Csuebcpm.zip](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
-|Unidades de suelos Alto Paragua|1:250.000|[Csuebcpm.zip](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
-|Unidades de suelos Bajo Paragua|1:250.000|[Csuebcpm.zip](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Unidades de suelos Cuenca completa - 1:500.000|[Csueccpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Unidades de suelos Bajo Caroni - 1:250.000|[Csuebcpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Unidades de suelos Medio Caroni - 1:250.000|[Csuemcpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Unidades de suelos Alto Caroni Este - 1:250.000|[Csueacepm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Unidades de suelos Alto Caroni Oeste - 1:250.000|[Csueacopm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Unidades de suelos Alto Paragua - 1:250.000|[Csueappm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Unidades de suelos Bajo Paragua - 1:250.000|[Csuebppm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
 </div>
 
 
@@ -52,9 +52,9 @@ fsajghdfjsahgfdjsag
 ###### Enlaces para descarga {-}
  
 <div style="font-size: 12px"> 
-|Descripcion|Escala/resolucion|Nombre archivo|
-|:----|:---:|:---:|
-|Base de referencia mundial (2006) Grupos de suelos|250 m|[Csuebcpm.zip](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Descripcion|Nombre archivo|
+|:------|:---:|
+|Base de referencia mundial (2006) Grupos de suelos - Resolucion 250 m|[Csuewrbsg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
 </div>
 
 ### Base de datos de suelos armonizados de FAO {-}
@@ -81,11 +81,23 @@ fsajghdfjsahgfdjsag
 
 jsdfsdfsgfjashgd
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
 ---
 
 ## Riesgo de erosion potencial {-}
 
 lksajdhljksadhjdsh
+
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
 
 ---
 
@@ -93,11 +105,43 @@ lksajdhljksadhjdsh
 
 ldskjfhljsdfhljfhd
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/5_arena.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
+
 ---
 
 ## Limo {-}
 
 sdlhflkjdshfljdshfl
+
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/6_Limo.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Limo (g/kg) 0 a 5 cm - resolucion 250 m|[Lim05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Limo (g/kg) 5 a 15 cm - resolucion 250 m|[Lim515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Limo (g/kg) 15 a 30 cm - resolucion 250 m|[Lim1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
 
 ---
 
@@ -105,11 +149,43 @@ sdlhflkjdshfljdshfl
 
 sdfhkljshdflkjshdlfkjh
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/4_Arcilla.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arcilla (g/kg) 0 a 5 cm - resolucion 250 m|[Arc05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arcilla (g/kg) 5 a 15 cm - resolucion 250 m|[Arc515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arcilla (g/kg) 15 a 30 cm - resolucion 250 m|[Arc1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
+
 ---
 
 ## Fragmento grueso {-}
 
 ksjdhgfkjhgsdkjhgsdfkhsg
+
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/7_Fragmento.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Fragmento grueso (cm3/dm3) 0 a 5 cm - resolucion 250 m|[Fra05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Fragmento grueso (cm3/dm3) 5 a 15 cm - resolucion 250 m|[Fra515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Fragmento grueso (cm3/dm3) 15 a 30 cm - resolucion 250 m|[Fra1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
 
 ---
 
@@ -117,11 +193,43 @@ ksjdhgfkjhgsdkjhgsdfkhsg
 
 sfdfhlksjdhfljkhdsfjhkjsfd
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/3_Da.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Densidad aparente (cg/cm3) 0 a 5 cm - resolucion 250 m|[Dap05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Densidad aparente  (cg/cm3) 5 a 15 cm - resolucion 250 m|[Dap515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Densidad aparente  (cg/cm3) 15 a 30 cm - resolucion 250 m|[Dap1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
+
 ---
 
-## Conetnido volumetrico de agua a APM {-}
+## Contenido volumetrico de agua a APM {-}
 
 sdlkhfjklhdsflkjhsdljkfh
+
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
 
 ---
 
@@ -129,11 +237,43 @@ sdlkhfjklhdsflkjhsdljkfh
 
 sdlkjhfljskdhfljsd
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
+
 ---
 
 ## pH {-}
 
 sdkjhgfsdkjghfksdh
+
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
 
 ---
 
@@ -141,11 +281,43 @@ sdkjhgfsdkjghfksdh
 
 sdklhfdsjhfljsdhjkh
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
+
 ---
 
 ## Densidad de Carbono organico {-}
 
 sdjkfhlkdsjhfhksdjf
+
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
 
 ---
 
@@ -153,11 +325,43 @@ sdjkfhlkdsjhfhksdjf
 
 sdkgfhjgdskjhgdshdsfhg
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
+
 ---
 
 ## Capacidad de intercambio cationico {-}
 
 sdnfjdshlkjsdhljfhskjdf
+
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
 
 ---
 
@@ -165,17 +369,54 @@ sdnfjdshlkjsdhljfhskjdf
 
 dfskjhfjkdshlkjsdhflkjdsf
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 15 a 30 cm - resolucion 250 m|[Are1530sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
+
 ---
 
 ## Conductividad electrica {-}
 
 sdlkjhfkjsdhlkjsdfhlkdsfhlkj
 
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
+
+###### Enlaces para descarga {-}
+ 
+<div style="font-size: 12px"> 
+|Descripcion|Nombre archivo|
+|:----|:---:|
+|Arena (g/kg) 0 a 5 cm - resolucion 250 m|[Are05sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+|Arena (g/kg) 5 a 15 cm - resolucion 250 m|[Are515sg](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
+</div>
+
 ---
 
 ## Sitios de muestreo de suelos {-}
 
 sdfjhlsdkjfhljsdhfljdsfhljhs
+
+<div>
+<p style = 'text-align:center;'>
+<a style = 'padding-right: 40px;' href="Imagenes/Csuebdhfao.png" target="_blank" title="Clases de suelos FAO"><img style="border: 2px solid; color: Black; " alt="Csuebdhfao.png" src="Imagenes/xxxx.png" /></a>
+</p>
+</div>
 
 ---
 
@@ -184,3 +425,7 @@ sdfjhlsdkjfhljsdhfljdsfhljhs
 De este estudio disponible en la web se obtuvieron diferentes variables de suelos, dentro de las cuales destacan las propiedades físicas y químicas: Densidad aparente; porcentaje de arena, limo y arcilla; Fragmento grueso, Capacidad de intercambio catiónico, Carbono orgánico de los suelos, su almacenaje y densidad,  pH, Nitrógeno, Contenido volumétrico de agua de los suelos. También las clases de suelos según la WRB y siete perfiles de suelos, con sus respectivos horizontes. A continuación se muestran algunas imágenes del estudio y posteriormente los enlaces de descarga de esta información.
 
 ---
+
+###### Para descagar todo la base de informacion solo haga clic en la figura siguiente: {-}
+
+
