--- a/03-Base_datos.Rmd
+++ b/03-Base_datos.Rmd
@@ -31,7 +31,7 @@ La informacion de suelos esta expresada en dos distintas extensiones y escalas, 
 <div style="font-size: 12px"> 
 |Descripcion|Nombre archivo|
 |:----|:---:|
-|Unidades de suelos Cuenca completa - 1:500.000|[](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/xxxx.zip)|
+|Unidades de suelos Cuenca completa - 1:500.000|[Csueccpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csueccpm.zip)|
 |Unidades de suelos Bajo Caroni - 1:250.000|[Csuebcpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuebcpm.zip)|
 |Unidades de suelos Medio Caroni - 1:250.000|[Csuemcpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csuemcpm.zip)|
 |Unidades de suelos Alto Caroni Este - 1:250.000|[Csueacepm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Csueacepm.zip)|
@@ -98,7 +98,7 @@ Capa sobre la Capacidad de Uso de las tierras en la cuenca para dos alcance y es
 <div style="font-size: 12px"> 
 |Descripcion|Nombre archivo|
 |:----|:---:|
-|Capacidad de uso de las tierras Cuenca completa - 1:500.000|[](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/xxxx.zip)|
+|Capacidad de uso de las tierras Cuenca completa - 1:500.000|[Cusoccpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Cusoccpm.zip)|
 |Capacidad de uso de las tierras Bajo Caroni - 1:250.000|[Cusobcpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Cusobcpm.zip)|
 |Capacidad de uso de las tierras Medio Caroni - 1:250.000|[Cusomcpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Cusomcpm.zip)|
 |Capacidad de uso de las tierras Alto Caroni Este - 1:250.000|[Cusoacepm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Cusoacepm.zip)|
@@ -124,7 +124,7 @@ Capa sobre el Riesgo de erosion potencial de las tierras, basado en la metodolog
 <div style="font-size: 12px"> 
 |Descripcion|Nombre archivo|
 |:----|:---:|
-|Riesgo de erosion de los suelos Cuenca completa - 1:500.000|[](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/xxxx.zip)|
+|Riesgo de erosion de los suelos Cuenca completa - 1:500.000|[Repccpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Repccpm.zip)|
 |Riesgo de erosion de los suelos Bajo Caroni - 1:250.000|[Repbcpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Repbcpm.zip)|
 |Riesgo de erosion de los suelos Medio Caroni - 1:250.000|[Repmcpm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Repmcpm.zip)|
 |Riesgo de erosion de los suelos Alto Caroni Este - 1:250.000|[Repacepm](BDsuelos_Caroni\3_Geoinformacion\Vectorial\1_Plan_Maestro_2004/Repacepm.zip)|
